[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/spaceship.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SpaceShip.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.2, 38.4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63.7, 13.9 )

[node name="SpaceShip" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 16 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.4
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
